Initial db setup and product detail page with mock product

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,9 +26,19 @@
   }
 }
 
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
   }
 }
