Added swiper, refactored image display and product details filtering

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -150,3 +150,30 @@
     @apply bg-background text-foreground;
   }
 }
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper {
+  width: 100%;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.swiper-slide-thumb-active {
+  opacity: 1;
+  border: 3px solid #4f46e5;
+}
